deps/v8/test/message/strict-octal-use-strict-after.out
*%(basename)s:33: SyntaxError: Octal literals are not allowed in strict mode.
  "use\040strict";
       ^^
SyntaxError: Octal literals are not allowed in strict mode.
